tests/baselines/reference/grammarAmbiguities.errors.txt
tests/cases/conformance/expressions/functionCalls/grammarAmbiguities.ts(8,1): error TS2346: Supplied parameters do not match any signature of call target.
tests/cases/conformance/expressions/functionCalls/grammarAmbiguities.ts(9,1): error TS2346: Supplied parameters do not match any signature of call target.


==== tests/cases/conformance/expressions/functionCalls/grammarAmbiguities.ts (2 errors) ====
    function f(n: any) { return null; }
    function g<A, B>(x: any) { return null; }
    interface A { }
    interface B { }
    var A, B;
    
    f(g<A, B>(7));
    f(g < A, B > 7); // Should error
    ~~~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    f(g < A, B > +(7)); // Should error
    ~~~~~~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    
    